k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: habesha-table
  labels:
    app.kubernetes.io/part-of: habesha-table
